# OperacionesListas

./: CMakeLists.txt  ListaDoble.cpp  ListaDoble.h  ListaDobleCircular.cpp  ListaDobleCircular.h  ListaSimple.cpp  ListaSimple.h  ListaSimpleCircular.cpp  ListaSimpleCircular.h  README.md  main.cpp  nodoDoble.h  nodoSimple.cpp  nodoSimple.h
